# MusicMapMaker

./: .gitignore  .gitmodules  CMakeLists.txt  MusicMapMaker_en_US.ts  MusicMapMaker_zh_CN.ts  README.md  main.cpp  mainwindow.ui  timing删除思路.drawio
UI by Nagisa/: 图片.qrc  音频时间控制器.ui
glsl/: fragmentshader.glsl.frag
resources/: glsrcs.qrc
resources/glsl/: audio_graph_fshader.glsl.frag  fragfontshader.glsl.frag  fragmentshader-dynamic.glsl.frag  fragmentshader-static.glsl.frag  fragmentshader.glsl.frag  vertexshader-dynamic.glsl.vert  vertexshader-static.glsl.vert  vertexshader.glsl.vert  vertfontshader.glsl.vert
resources/glsl/macos/: fragmentshader.glsl.frag  vertexshader-static.glsl.vert
resources/map/Designant - Designant/: Designant - Designant. (Benson_) [Designant]-test.osu
resources/map/rm/IvmData/: ivm.ini
resources/textures/default/: skinconfig.json
resources/textures/default/hitobject/: skinconfig.json
src/: EventFilterApp.hpp  filebrowsercontroller.cpp  filebrowsercontroller.h  hellouserpage.cpp  hellouserpage.h  hellouserpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mfilebrowsercontroller.h  mfilebrowsercontroller.ui  mprojectcontroller.ui  projectcontroller.cpp  projectcontroller.h  timecontroller.h  timecontroller.ui
src/audio/: BackgroundAudio.cpp  BackgroundAudio.h
src/canvas/: FrameRateCounter.cpp  FrameRateCounter.h  GLCanvas.cpp  GLCanvas.h  GLCanvas.hpp  GLCanvasEvents.cpp  GLRenderer.cpp  GLRenderer.h  MapWorkspaceCamvas.h  MapWorkspaceCanvas.cpp  MapWorkspaceCanvas.h  RenderBuffer.hpp  RenderCommand.cpp  RenderCommand.h  TexturePool.cpp  TexturePool.h
src/canvas/geom/: QuadInstanceData.hpp
src/canvas/map/: MapWorkspaceCanvas.cpp  MapWorkspaceCanvas.h  MapWorkspaceSkin.cpp  MapWorkspaceSkin.h  RenderParam.h
src/canvas/map/editor/: CanvasSettings.h  CanvasStatus.h  EditorBuffer.h  EditorEnumerations.h  HitObjectEditor.cpp  HitObjectEditor.h  MapEditor.cpp  MapEditor.h  TimingEditor.cpp  TimingEditor.h
src/canvas/map/generator/: AreaInfoGenerator.cpp  AreaInfoGenerator.h  AreaInfoGenerator.hpp  BeatGenerator.cpp  BeatGenerator.h  BeatGenerator.hpp  EffectFrameGenerator.h  EffectGenerator.cpp  JudgelineGenerator.cpp  JudgelineGenerator.h  JudgelineGenerator.hpp  ObjectGenerator.cpp  ObjectGenerator.h  ObjectGenerator.hpp  OrbitGenerator.cpp  OrbitGenerator.h  OrbitGenerator.hpp  PreviewGenerator.cpp  PreviewGenerator.h  PreviewGenerator.hpp  TimeInfoGenerator.cpp  TimeInfoGenerator.h
src/canvas/render/: Renderer2D.cpp  Renderer2D.hpp
src/canvas/renderer/: AbstractRendere.h  AbstractRenderer.cpp  AbstractRenderer.h  AbstractRenderer.hpp  RenderCommand.h  RendererManager.cpp  RendererManager.h
src/canvas/renderer/dynamic/: DynamicRenderer.cpp  DynamicRenderer.h  DynamicRenderer.hpp
src/canvas/renderer/font/: FontPool.cpp  FontPool.h  FontRenderer.cpp  FontRenderer.h  FontRenderer.hpp  GlyphPacker.cpp  GlyphPacker.h
src/canvas/renderer/shader/: GLShader.cpp  GLShader.h  GLShader.hpp  Shader.cpp  Shader.h
src/canvas/renderer/static/: StaticRenderer.cpp  StaticRenderer.h  StaticRenderer.hpp
src/canvas/texture/: BaseTexturePool.cpp  BaseTexturePool.h  Texture.cpp  Texture.h  Texture.hpp  TexturePool.cpp  TexturePool.h
src/canvas/texture/array/: TextureArray.cpp  TextureArray.h
src/canvas/texture/atlas/: MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.h  TextureAtlas.cpp  TextureAtlas.h
src/canvas/texture/font/: FontPool.cpp  FontPool.h
src/canvas/texture/pool/: Atlas.cpp  Atlas.h  Atlas.hpp  BaseTexturePool.cpp  BaseTexturePool.h  MTexturePool.cpp  MTexturePool.h  MTexturePool.hpp  MaxRectsBinPack.cpp  MaxRectsBinPack.h  TextureArray.cpp  TextureArray.h  TexturePool.cpp  TexturePool.h
src/hitobject/: HitObject.cpp  HitObject.h
src/hitobject/Note/: ComplexNote.cpp  ComplexNote.h  Hold.cpp  Hold.h  Note.cpp  Slide.cpp  Slide.h
src/log/: colorful-log.h  colorful_log.cpp
src/map/: MMap.cpp
src/mmm/: Beat.h  MapWorkProject.cpp  MapWorkProject.h  Metadata.h  NoteCollection.hpp  SampleSet.h
src/mmm/hitobject/: HitObject.cpp  HitObject.h
src/mmm/hitobject/Note/: ComplexNote.cpp  ComplexNote.h  Hold.cpp  Hold.h  HoldEnd.cpp  HoldEnd.h  Note.cpp  Note.h  NoteMetadata.h  Slide.cpp  Slide.h
src/mmm/map/: MMap.cpp  MMap.h  MMap.hpp  MapMetadata.h
src/mmm/map/callback/: AudioEnginPlayCallback.cpp  AudioEnginPlayCallback.h
src/mmm/map/malody/: MalodyMap.cpp  MalodyMap.h
src/mmm/map/osu/: OsuMap.cpp  OsuMap.h
src/mmm/map/rm/: RMMap.cpp  RMMap.h
src/mmm/timing/: Timing.cpp  Timing.h
src/mmm/timing/osu/: OsuTiming.cpp  OsuTiming.h
src/threads/: BackupThread.cpp  BackupThread.h  BackupThread.hpp  EffectThread.cpp  EffectThread.h  ThreadPool.h  ThreadSafeEffect.h  ThreadSafeQueue.h
src/timing/: Timing.cpp
src/ui/: GlobalSettings.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mfilebrowsercontroller.cpp
src/ui/audio/: audiocontroller.cpp  audiocontroller.h  audiocontroller.ui  audiocontrols.cpp  trackcontrols.cpp  trackmanager.cpp  trackmanager.h  trackmanager.ui
src/ui/audio/callback/: AudioPlayCallBack.cpp  (+1 more)
src/ui/canvas/: CanvasContainer.cpp  CanvasContainer.h
src/ui/controllers/: mfilebrowsercontroller.cpp  mfilebrowsercontroller.h  mfilebrowsercontroller.ui  mprojectcontroller.ui  projectcontroller.cpp  projectcontroller.h  timecontroller.cpp  timecontroller.h  timecontroller.ui  wheelablespinbox.h
src/ui/guide/: newmapguide.cpp  newmapguide.h  newmapguide.ui  newtimingguide.cpp  newtimingguide.h  newtimingguide.ui
src/ui/infoui/: minfo.cpp  minfo.h  minfo.ui
src/ui/log/: loglevel.h  uilogger.h
src/ui/pageui/: mpage.cpp  mpage.h  mpage.ui
src/ui/project/: projectmanager.cpp  projectmanager.h  projectmanager.ui
src/ui/template/: AutoResizeTableWidget.cpp  AutoResizeTableWidget.h  HideableToolWindow.cpp  HideableToolWindow.hpp  ScalableImageLabel.cpp  ScalableImageLabel.h
src/util/: mutil.h  mutil.hpp
themes/QtThemeDark/: QtThemeDark.qrc
themes/QtThemeLight/: QtThemeLight.qrc
translations/: MusicMapMaker_en_US.ts  MusicMapMaker_zh_CN.ts
(+92 files in other folders)
